samples/_failures_safe/1761724953_5f73b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52b46ea1.c: In function ‘main’:
./samples/SAFE/__tmp_52b46ea1.c:175:16: error: missing terminating " character
  175 |         printf("
      |                ^
./samples/SAFE/__tmp_52b46ea1.c:175:9: error: expected expression at end of input
  175 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_52b46ea1.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52b46ea1.c:175:9: error: expected declaration or statement at end of input
